demo_mount_ebs/securitygroup.tf
# Security Group

resource "aws_security_group" "allow-ssh" {
	vpc_id = "${aws_vpc.main-vpc.id}"
	name = "allow-ssh"
	description = "test-sg"
	# Outbound port
	egress {
		from_port = 0
		to_port = 0
		protocol = -1
		cidr_blocks = ["0.0.0.0/0"]
	}
	
	# Inbound Port
	ingress {
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}
	tags {
		Name = "test-sg"
	}
}
